--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,12 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>JS Amazona</title>
 </head>
 
 <body>
-    <h1>JSAMAZONA</h1>
-    <p>The brand new ecommerce with vanilla JS</p>
+    <div class="grid-container">
+        <header>
+            <div class="brand">
+                <a href="/#/">jsamazona</a>
+            </div>
+            <div>
+                <a href="/#/signin">Sign-In</a>
+                <a href="/#/cart">Cart</a>
+            </div>
+        </header>
+        <main>
+            Product List
+        </main>
+        <footer>
+            All rights reserved &reg2022
+        </footer>
+    </div>
 
 </body>
 
