--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
     <div class="overlay" id="message-overlay"></div>
     <div class="grid-container">
         <header id="header-container"></header>
+        <aside id="aside-container"></aside>
         <main id="main-container"></main>
         <footer>
             All rights reserved &reg2022
